[project]
name = "dancing-cow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "certifi>=2026.2.25",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "livekit>=1.1.2",
    "livekit-agents>=1.4.5",
    "livekit-plugins-deepgram>=1.4.5",
    "livekit-plugins-elevenlabs>=1.4.5",
    "livekit-plugins-openai>=1.4.5",
    "livekit-plugins-sarvam>=1.4.5",
    "livekit-plugins-silero>=1.4.5",
    "livekit-plugins-turn-detector>=1.4.5",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "sarvamai>=0.1.27",
    "uvicorn>=0.41.0",
]
